info/03-freedriving_testdone/RemoteApi/include/DianaAPI.h

DIANA_API int inverse(/*IN[6]*/ double *pose, /*OUT[7]*/ double *joints, /*IN[6]*/ double *active_tcp = nullptr,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointPos(/*OUT[7]*/ double *joints, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointAngularVel(/*OUT[7]*/ double *vels, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointCurrent(/*OUT[7]*/ double *joints, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointTorque(/*OUT[7]*/ double *torques, /*IN*/ const char *strIpAddress = "");
DIANA_API int getTcpPos(/*OUT[6]*/ double *pose, /*IN*/ const char *strIpAddress = "");
DIANA_API double getTcpExternalForce(const char *strIpAddress = "");
DIANA_API int releaseBrake(const char *strIpAddress = "");  // powerOn
DIANA_API int holdBrake(const char *strIpAddress = "");  // powerOff
typedef enum _Mode {
    T_MODE_INVALID = -1,
    T_MODE_POSITION = 0,
    T_MODE_JOINT_IMPEDANCE,
    T_MODE_CART_IMPEDANCE,
} mode_e;
DIANA_API int changeControlMode(
    mode_e m,
    /*IN*/ const char *strIpAddress = "");  // ChangeMode:Position, JointImpedance, CartImpedance
/*************************************** version 0.2 ***************************************/

DIANA_API unsigned short getLibraryVersion();
DIANA_API const char *formatError(int e, /*IN*/ const char *strIpAddress = "");
DIANA_API int getLastError(const char *strIpAddress = "");
DIANA_API int setLastError(int e, /*IN*/ const char *strIpAddress = "");
// setDefaultActiveTcp:该函数将会改变moveTCP，rotationTCP，moveJToPose，moveLToPose，speedJ，speedL，forward，inverse，getTcpPos，getTcpExternalForce的默认行为。
DIANA_API int setDefaultActiveTcp(/*IN[16]*/ double *default_tcp, /*IN*/ const char *strIpAddress = "");
DIANA_API int getLinkState(const char *strIpAddress = "");
/*************************************** version 0.3 ***************************************/

DIANA_API int getTcpForce(/*OUT[6]*/ double *forces, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointForce(/*OUT[7]*/ double *forces, /*IN*/ const char *strIpAddress = "");
DIANA_API bool isCollision(const char *strIpAddress = "");
/*************************************** DH参数标定 ***************************************/

DIANA_API int initDHCali(/*IN[3*nrSets]*/ double *tcpMeas, /*IN[7*nrSets]*/ double *jntPosMeas,
                         /*[IN]*/ unsigned int nrSets, /*IN*/ const char *strIpAddress = "");
DIANA_API int getDHCaliResult(/*OUT[28]*/ double *rDH, /*OUT[6]*/ double *wRT, /*OUT[3]*/ double *tRT,
                              /*OUT[2]*/ double *confid, /*IN*/ const char *strIpAddress = "");
DIANA_API int setDH(/*IN[7]*/ double *a, /*IN[7]*/ double *alpha, /*IN[7]*/ double *d, /*IN[7]*/ double *theta,
                    /*IN*/ const char *strIpAddress = "");
DIANA_API int setWrd2BasRT(/*IN[6]*/ double *RTw2b, /*IN*/ const char *strIpAddress = "");
DIANA_API int setFla2TcpRT(/*IN[3]*/ double *RTf2t, /*IN*/ const char *strIpAddress = "");
/*************************************** version 0.4 ***************************************/

DIANA_API char getRobotState(const char *strIpAddress = "");
DIANA_API int resume(const char *strIpAddress = "");
DIANA_API int setJointCollision(/*IN[7]*/ double *collision, /*IN*/ const char *strIpAddress = "");
DIANA_API int setCartCollision(/*IN[6]*/ double *collision, /*IN*/ const char *strIpAddress = "");