info/03-freedriving_testdone/RemoteApi/lib/DianaApi.py


def inverse(pose, joints, ipAddress = ''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    dianaJointsPosition = DIANA_JOINTS_POSITION()
    dianaJointsPosition.values = (c_double * 7)()
    active_tcp = c_void_p(0)
    api_mod.inverse.argtypes = [POINTER(DIANA_TCP_POSE), POINTER(
        DIANA_JOINTS_POSITION),  c_void_p, c_char_p]
    api_mod.inverse.restype = c_int
    ret = api_mod.inverse(dianaTcpPose, byref(dianaJointsPosition), active_tcp, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(joints)):
        joints[index] = dianaJointsPosition.values[index]
    return message(ret)

def getJointPos(jointsPosition, ipAddress = ''):
    dianaJointsPosition = DIANA_JOINTS_POSITION()
    dianaJointsPosition.values = (c_double * 7)()
    api_mod.getJointPos.argtypes = [POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.getJointPos.restype = c_int
    ret = api_mod.getJointPos(byref(dianaJointsPosition), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(jointsPosition)):
      jointsPosition[index] = dianaJointsPosition.values[index]
    return message(ret)

def getJointAngularVel(jointAngularVel, ipAddress = ''):
    dianaJointAngularVel = DIANA_JOINT_ANGULAR_VEL()
    dianaJointAngularVel.values = (c_double * 7)()
    api_mod.getJointAngularVel.argtypes = [POINTER(DIANA_JOINT_ANGULAR_VEL), c_char_p]
    api_mod.getJointAngularVel.restype = c_int
    ret = api_mod.getJointAngularVel(byref(dianaJointAngularVel), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(jointAngularVel)):
      jointAngularVel[index] = dianaJointAngularVel.values[index]
    return message(ret)

def getJointCurrent(jointCurrent, ipAddress = ''):
    dianaJointCurrent = DIANA_JOINT_CURRENT()
    dianaJointCurrent.values = (c_double*7)()
    for index in range(0, len(jointCurrent)):
        dianaJointCurrent.values[index] = jointCurrent[index]
    api_mod.getJointCurrent.argtypes = [POINTER(DIANA_JOINT_CURRENT), c_char_p]
    api_mod.getJointCurrent.restype = c_int
    ret = api_mod.getJointCurrent(byref(dianaJointCurrent), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(jointCurrent)):
        jointCurrent[index] = dianaJointCurrent.values[index]
    return message(ret)

def getJointTorque(jointTorque, ipAddress = ''):
    dianaJointTorque = DIANA_JOINT_TORQUE()
    dianaJointTorque.values = (c_double*7)()
    for index in range(0, len(jointTorque)):
        dianaJointTorque.values[index] = jointTorque[index]
    api_mod.getJointTorque.argtypes = [POINTER(DIANA_JOINT_TORQUE), c_char_p]
    api_mod.getJointTorque.restype = c_int
    ret = api_mod.getJointTorque(byref(dianaJointTorque), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(jointTorque)):
        jointTorque[index] = dianaJointTorque.values[index]
    return message(ret)

def getTcpPos(tcpPose, ipAddress = ''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    api_mod.getTcpPos.argtypes = [POINTER(DIANA_TCP_POSE), c_char_p]
    api_mod.getTcpPos.restype = c_int
    ret = api_mod.getTcpPos(byref(dianaTcpPose), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(dianaTcpPose.values)):
      tcpPose[index] = dianaTcpPose.values[index]
    return message(ret)

def getTcpExternalForce(ipAddress = ''):
    api_mod.getTcpExternalForce.argtypes = [c_char_p]
    api_mod.getTcpExternalForce.restype = c_double
    ret = api_mod.getTcpExternalForce(bytes(ipAddress.encode('utf-8')))
    return ret

def releaseBrake(ipAddress = ''):
    api_mod.releaseBrake.argtypes = [c_char_p]
    api_mod.releaseBrake.restype = c_int
    ret = api_mod.releaseBrake(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def holdBrake(ipAddress = ''):
    api_mod.holdBrake.argtypes = [c_char_p]
    api_mod.holdBrake.restype = c_int
    ret = api_mod.holdBrake(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def changeControlMode(m, ipAddress = ''):
    if not isinstance(m, mode_e):
	        raise TypeError(
			            'mode must be an instance of mode_e Enum')
    api_mod.changeControlMode.argtypes = [c_int, c_char_p]
    api_mod.changeControlMode.restype = c_int
    ret = api_mod.changeControlMode(m.value, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getLibraryVersion():
    # api_mod.getLibraryVersion.argtypes = [c_char_p]
    api_mod.getLibraryVersion.restype = c_uint
    ret = api_mod.getLibraryVersion()
    return ret

def formatError(e, ipAddress = ''):
    api_mod.formatError.argtypes = [c_int, c_char_p]
    api_mod.formatError.restype = c_char_p
    ret = api_mod.formatError(e, bytes(ipAddress.encode('utf-8')))
    return ret

def getLastError(ipAddress = ''):
    api_mod.getLastError.argtypes = [c_char_p]
    api_mod.getLastError.restype = c_int
    ret = api_mod.getLastError(bytes(ipAddress.encode('utf-8')))
    return ret

def setLastError(e, ipAddress = ''):
    api_mod.setLastError.argtypes = [c_int, c_char_p]
    api_mod.setLastError.restype = c_int
    ret = api_mod.setLastError(e, bytes(ipAddress.encode('utf-8')))
    return ret

def setDefaultActiveTcp(default_tcp, ipAddress = ''):
    defaultTcp = DIANA_DEFAULT_TCP()
    defaultTcp.values = (c_double*16)()
    for index in range(0, len(defaultTcp.values)):
        defaultTcp.values[index] = default_tcp[index]
    api_mod.setDefaultActiveTcp.argtypes = [POINTER(DIANA_DEFAULT_TCP), c_char_p]
    api_mod.setDefaultActiveTcp.restype = c_int
    ret = api_mod.setDefaultActiveTcp(defaultTcp, bytes(ipAddress.encode('utf-8')))
    if(ret == 0):
        print("setDefaultActiveTcp succeeds")
        return True
    else:
        print("setDefaultActiveTcp fails")
        return False

def getLinkState(ipAddress = ''):
    api_mod.getLinkState.argtypes = [c_char_p]
    api_mod.getLinkState.restype = c_int
    ret = api_mod.getLinkState(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getTcpForce(tcpForce, ipAddress = ''):
    dianaTcpForce = DIANA_TCP_FORCE()
    dianaTcpForce.values = (c_double * 6)()
    api_mod.getTcpForce.argtypes = [POINTER(DIANA_TCP_FORCE), c_char_p]
    api_mod.getTcpForce.restype = c_int
    ret = api_mod.getTcpForce(byref(dianaTcpForce), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(dianaTcpForce.values)):
      tcpForce[index] = dianaTcpForce.values[index]
    return message(ret)

def getJointForce(jointForce, ipAddress = ''):
    dianaJointForce = DIANA_JOINTS_FORCE()
    dianaJointForce.values = (c_double * 7)()
    api_mod.getJointForce.argtypes = [POINTER(DIANA_JOINTS_FORCE), c_char_p]
    api_mod.getJointForce.restype = c_int
    ret = api_mod.getJointForce(byref(dianaJointForce), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(jointForce)):
      jointForce[index] = dianaJointForce.values[index]
    return message(ret)

def isCollision(ipAddress = ''):
    api_mod.isCollision.argtypes = [c_char_p]
    api_mod.isCollision.restype = c_bool
    ret = api_mod.isCollision(bytes(ipAddress.encode('utf-8')))
    return ret

def initDHCali(tcpMeas,jntPosMeas,nrSets, ipAddress = ''):
    tcpMeasArray = c_double * (nrSets * 3)
    tcpMeasData = tcpMeasArray()
    jntPosMeasArray = c_double * (nrSets * 7)
    jntPosMeasData = jntPosMeasArray()
    for index in range(0, nrSets * 3):
        tcpMeasData[index] = tcpMeas[index]
    for index in range(0, nrSets * 7):
        jntPosMeasData[index] = jntPosMeas[index]
    api_mod.initDHCali.restype = c_int
    api_mod.initDHCali.argtypes = [ POINTER(c_double),POINTER(c_double),c_uint, c_char_p]
    ret = api_mod.initDHCali(tcpMeasData, jntPosMeasData, nrSets, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getDHCaliResult(rDH,wRT,tRT,confid, ipAddress = ''):
    dhR = DIANA_DH_R()
    dhR.values = (c_double*28)()
    rtW = DIANA_DH_WRT()
    rtW.values = (c_double*6)()
    rtT = DIANA_DH_TRT()
    rtT.values = (c_double*3)()
    dhConfid = DIANA_DH_CONFID()
    dhConfid.values = (c_double*2)()
    api_mod.getDHCaliResult.restype = c_int
    api_mod.getDHCaliResult.argtypes = [ POINTER(DIANA_DH_R),POINTER(DIANA_DH_WRT),POINTER(DIANA_DH_TRT),POINTER(DIANA_DH_CONFID), c_char_p]
    ret = api_mod.getDHCaliResult(byref(dhR), byref(rtW), byref(rtT), byref(dhConfid), bytes(ipAddress.encode('utf-8')))
    for index in range(0,len(rDH)):
        rDH[index] = dhR.values[index]
    for index in range(0,len(wRT)):
        wRT[index] = rtW.values[index]
    for index in range(0,len(tRT)):
        tRT[index] = rtT.values[index]
    for index in range(0,len(confid)):
        confid[index] = dhConfid.values[index]
    return message(ret)

def setDH(a,alpha,d,theta, ipAddress = ''):
    arr_aDH = DIANA_DH_A()
    arr_aDH.values = (c_double*7)()
    for index in range(0, len(a)):
        arr_aDH.values[index] = a[index]
    arr_alphaDH = DIANA_DH_Alpha()
    arr_alphaDH.values = (c_double*7)()
    for index in range(0, len(alpha)):
        arr_alphaDH.values[index] = alpha[index]
    arr_dDH = DIANA_DH_D()
    arr_dDH.values = (c_double*7)()
    for index in range(0, len(d)):
        arr_dDH.values[index] = d[index]
    arr_thetaDH = DIANA_DH_Theta()
    arr_thetaDH.values = (c_double*7)()
    for index in range(0, len(theta)):
        arr_thetaDH.values[index] = theta[index]
    api_mod.setDH.restype = c_int
    api_mod.setDH.argtypes = [ POINTER(DIANA_DH_A), 
        POINTER(DIANA_DH_Alpha),POINTER(DIANA_DH_D), POINTER(DIANA_DH_Theta), c_char_p]
    ret = api_mod.setDH(byref(arr_aDH),byref(arr_alphaDH),byref(arr_dDH),byref(arr_thetaDH), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setWrd2BasRT(RTw2b, ipAddress = ''):
    arr_RTw2b = DIANA_DH_RTw2b()
    arr_RTw2b.values = (c_double*6)()
    for index in range(0, len(RTw2b)):
        arr_RTw2b.values[index] = RTw2b[index]
    api_mod.setWrd2BasRT.restype = c_int
    api_mod.setWrd2BasRT.argtypes = [ POINTER(DIANA_DH_RTw2b), c_char_p]
    ret = api_mod.setWrd2BasRT(byref(arr_RTw2b), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setFla2TcpRT(RTf2t, ipAddress = ''):
    arr_RTf2t = DIANA_DH_RTf2t()
    arr_RTf2t.values = (c_double*3)()
    for index in range(0, len(RTf2t)):
        arr_RTf2t.values[index] = RTf2t[index]
    api_mod.setFla2TcpRT.restype = c_int
    api_mod.setFla2TcpRT.argtypes = [ POINTER(DIANA_DH_RTf2t), c_char_p]
    ret = api_mod.setFla2TcpRT(byref(arr_RTf2t), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getRobotState(ipAddress = ''):
    api_mod.getRobotState.argtypes = [c_char_p]
    api_mod.getRobotState.restype = c_int8
    ret = api_mod.getRobotState(bytes(ipAddress.encode('utf-8')))
    return ret

def resume(ipAddress = ''):
    api_mod.resume.argtypes = [c_char_p]
    api_mod.resume.restype = c_int
    ret = api_mod.resume(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setJointCollision(collision, ipAddress = ''):
    jointCollision = DIANA_JOINT_COLLISION()
    jointCollision.values = (c_double*7)()
    for index in range(0, len(collision)):
        jointCollision.values[index] = collision[index]
    api_mod.setJointCollision.argtypes = [POINTER(DIANA_JOINT_COLLISION), c_char_p]
    api_mod.setJointCollision.restype = c_int
    ret = api_mod.setJointCollision(jointCollision, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setCartCollision(collision, ipAddress = ''):
    cartCollision = DIANA_CART_COLLISION()
    cartCollision.values = (c_double*6)()
    for index in range(0, len(cartCollision.values)):
        cartCollision.values[index] = collision[index]
    api_mod.setCartCollision.argtypes = [POINTER(DIANA_CART_COLLISION), c_char_p]
    api_mod.setCartCollision.restype = c_int
    ret = api_mod.setCartCollision(cartCollision, bytes(ipAddress.encode('utf-8')))
    return message(ret)
